--- a/package.json
+++ b/package.json
@@ -22,9 +22,11 @@
   },
   "homepage": "https://github.com/FerhatAvdic/Place-Review-Platform#readme",
   "dependencies": {
+    "@uirouter/angularjs": "^1.0.13",
     "angular": "^1.6.8",
     "angular-animate": "^1.6.8",
     "angular-aria": "^1.6.8",
+    "angular-jwt": "^0.1.9",
     "angular-material": "^1.1.5",
     "angular-messages": "^1.6.8",
     "bcryptjs": "^2.4.3",
